syntax = "proto3";

package authServerClient;
import "protobuf-response.proto";
import "auth-player-dto.proto";
import "auth-verify-dto.proto";

option java_package = "org.dbs.protobuf.auth";
option java_multiple_files = true;

service AuthVerifyClientService {
  // jwt
  rpc verifyJwt (VerifyJwtRequest) returns (org.dbs.protobuf.core.MainResponse) {}
}
////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
//======================================================================================================================
